ARROW-2963: [C++] Make thread pool fork-safe

In a forked child process, ThreadPool should reinitialize its internal state as though no threads had been spawned.

Author: Antoine Pitrou <antoine@python.org>

Closes #2363 from pitrou/ARROW-2963-thread-pool-fork-safety and squashes the following commits:

851c1957 <Antoine Pitrou> Fix test on Python 2.7
366939e8 <Antoine Pitrou> - Rename FixIfBroken() - Add multiprocessing-based Python test
956556b5 <Antoine Pitrou> Disable test under Valgrind
67bc877b <Antoine Pitrou> ARROW-2963:  Make thread pool fork-safe